<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.laywee.lawyeehelper2.activity.CalcuPeriodActivity">

    <include android:id="@+id/ll_toolbar" layout="@layout/layout_toolbar"/>
        <RadioGroup
            android:id="@+id/rg_convert"
            android:layout_width="300dp"
            android:layout_below="@+id/ll_toolbar"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
          >

            <RadioButton
                android:id="@+id/rb_normal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/normal_convert"
                android:textSize="20sp"/>

            <RadioButton
                android:id="@+id/rb_workday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/workday_convert"
                android:textSize="20sp"
                />
        </RadioGroup>
    <LinearLayout
        android:id="@+id/ll_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/rg_convert"
       >
        <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:background="@color/text_bg"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/startdate"
            />
        <TextView
            android:id="@+id/tv_start"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text=""
            />
    </LinearLayout>
    <View
        android:id="@+id/devider_1"
        android:layout_below="@+id/ll_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@color/black"
        />

    <LinearLayout
        android:id="@+id/ll_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_below="@+id/devider_1"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/text_bg"
            android:gravity="center"
            android:text="@string/enddate"
            android:textColor="@color/black"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_end"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp"
            />
    </LinearLayout>
    <View
        android:id="@+id/devider_2"
        android:layout_below="@+id/ll_2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:background="@color/black"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="horizontal"
        android:layout_below="@+id/devider_2"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="end"
            android:background="@color/text_bg"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/space_date"
            />
        <TextView
            android:id="@+id/tv_value"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text=""
            />
    </LinearLayout>
</RelativeLayout>
