<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv_quike_check"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:padding="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/quike_check" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_quike_check"
                android:layout_centerHorizontal="true"
                android:text="@string/quick_check"
                android:textColor="@color/main_text_color"
                android:textSize="15sp" />
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/iv_kl_check"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_centerInParent="true"
                android:padding="10dp"
                android:scaleType="fitXY"
                android:src="@drawable/kl_check" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_kl_check"
                android:layout_centerHorizontal="true"
                android:text="@string/kl_check"
                android:textColor="@color/main_text_color"
                android:textSize="15sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_practice_skill"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:scaleType="fitXY"
                    android:padding="10dp"
                    android:src="@drawable/skill" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_practice_skill"
                    android:layout_centerHorizontal="true"
                    android:text="@string/practice_skill"
                    android:textColor="@color/main_text_color"
                    android:textSize="15sp"

                    />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/iv_practice_tool"
                    android:layout_width="150dp"
                    android:layout_height="100dp"
                    android:layout_centerInParent="true"
                    android:padding="10dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/tools" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/iv_practice_tool"
                    android:layout_centerHorizontal="true"
                    android:text="@string/practice_tool"
                    android:textColor="@color/main_text_color"
                    android:textSize="15sp" />
            </RelativeLayout>
        </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>


</LinearLayout>